syntax = "proto3";
package irismod.random;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "mods.irisnet.org/random/types";

// Random defines the feed standard
message Random {
  string request_tx_hash = 1
      [ (gogoproto.moretags) = "yaml:\"request_tx_hash\"" ];
  int64 height = 2;
  string value = 3;
}

// Request defines the random request standard
message Request {
  int64 height = 1;
  string consumer = 2;
  string tx_hash = 3 [ (gogoproto.moretags) = "yaml:\"tx_hash\"" ];
  bool oracle = 4;
  repeated cosmos.base.v1beta1.Coin service_fee_cap = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"service_fee_cap\""
  ];
  string service_context_id = 6 [
    (gogoproto.customname) = "ServiceContextID",
    (gogoproto.moretags) = "yaml:\"service_context_id\""
  ];
}
